// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.pms.contracts.commons;

option java_multiple_files = true;

enum RepairActionCode {
  UNKNOWN = 0;
  RETRY = 1;
  MANUAL_INTERVENTION = 2;
  IGNORE = 3;
  END_EXECUTION = 4;
  MARK_AS_SUCCESS = 5;
  ON_FAIL = 6;
  STAGE_ROLLBACK = 7;
  STEP_GROUP_ROLLBACK = 8;
  CUSTOM_FAILURE = 9;
}
